--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <span data-key="x">x</span>
         <span data-key="-">-</span>
         <span data-key="+">+</span>
+        <span data-key="(">(</span>
+        <span data-key=")">)</span>
       </section>
 
 
